--- a/view/login.handlebars
+++ b/view/login.handlebars
@@ -1,12 +1,10 @@
 <section>
-        <form>
-            <fieldset>
-                <legend>Login</legend>
-                <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" required>
-                <label for="password">Wachtwoord</label>
-                <input type="password" name="password" id="password" required>
-                <input type="submit" value="Login">
-            </fieldset>
-        </form>
-    </section>
+    <form action="">
+        <label for="">Naam</label>
+        <input type="text">
+        <label for="">Email</label>
+        <input type="text">
+        <label for="">Bericht</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+    </form>
+</section>
