--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,8 @@
 body{
-    background-color: brown;
-    color: white;
+    color: black;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
 }
