--- a/static/style.css
+++ b/static/style.css
@@ -1,24 +1,66 @@
+*, html{
+    box-sizing:border-box;
+    margin: 0;
+    padding: 0;
+    font-family: helvetica;
+}
+
 body{
     background-color: grey;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    gap: 2em;
+}
+
+header{
+    background-color: black;
+    color: greenyellow;
+    padding: 1em;
+    text-align: center;
 }
 
 form{
     background-color: black;
-    width: 10em;
-    height: 10em;
-    padding: 1em;
+    padding: 2em;
     border-radius: 1em;
     color: white;
+    display: flex;
+    flex-direction: column;
+    max-width: fit-content;
+    margin: auto;
+    gap: 1em;
+    box-shadow: 0.5em 0.5em greenyellow;
+}
+
+form div{
+    display: flex;
+    flex-direction: column;
+    gap: 0.3em;
+}
+
+form input{
+    padding: 1em;
+    border-radius: 1em;
+    border: none;
 }
 
 form button{
-    background-color: white;
+    background-color: greenyellow;
     padding: 0.5em;
     border-radius: 1em;
     border: none;
     color: black;
-    float: right;
+    width: fit-content;
+    font-size: 1em;
+}
+
+footer{
+    background-color: black;
+    color: greenyellow;
+    padding: 1em;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
