--- a/view/layouts/main.handlebars
+++ b/view/layouts/main.handlebars
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test app</title>
+    <title>Matching app</title>
+    <link rel="stylesheet" href="../../static/style.css">
 </head>
 <body>
+    {{>header}}
     {{{body}}}
+    {{> footer}}
 </body>
 </html>
