Aanpassing structuur handlebars pages

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,4 +1,5 @@
-<body>
+<section class="registeren">
+    <h2>Registeren</h2>
     <form action="/", method="POST">
         <div>
             <label for="name">Naam:</label>
@@ -10,4 +11,4 @@
         </div>
         <button>Verzenden</button>
     </form>
-</body>
+</section>
