--- a/static/style.css
+++ b/static/style.css
@@ -2,44 +2,41 @@
     box-sizing:border-box;
     margin: 0;
     padding: 0;
-    font-family: helvetica;
+    font-family: 'Poppins', sans-serif;
+}
+
+:root{
+    --main-color: #FFFFFF;
+    --grey1: #ececec;
+    --grey2: #C4C4C4;
+    --second-color: #000000;
 }
 
 body{
-    background-color: grey;
-}
-
-header{
-    background-color: black;
-    color: burlywood;
-    padding: 1em;
-    text-align: center;
-}
-
-footer{
-    background-color: black;
-    color: burlywood;
-    padding: 1em;
-    text-align: center;
-    position:fixed;
-    bottom:0;
-    left: 0;
-    right: 0;
-}
-
-
-
-.registeren{
-    background-color: black;
-    color: white;
+    padding: 2em;
     display: flex;
     flex-direction: column;
-    max-width: 20em;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding: 2em;
-    border-radius: 1em;
+    gap: 1em;
+    margin-bottom: 7em;
+}
+
+button{
+    padding: 1em;
+    background-color: var(--second-color);
+    color: var(--main-color);
+    border-radius: 10em;
+    border: none;
+    width: fit-content;
+    align-self: flex-end;
+    font-size: 1em;
+}
+
+.registeren{
+    background-color: var(--grey1);
+    padding: 1em;
+    border-radius: 2em;
+    display: flex;
+    flex-direction: column;
     gap: 1em;
 }
 
@@ -47,63 +44,168 @@ footer{
     display: flex;
     flex-direction: column;
     gap: 1em;
+    position: relative;
 }
 
 .registeren form div{
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
+    font-size: 1.1em;
 }
 
 .registeren form div input{
     padding: 1em;
-    border-radius: 1em;
     border: none;
-    outline-color: burlywood;
+    border-radius: 10em;
 }
 
-.registeren form button{
-    background-color: burlywood;
-    color: black;
-    border: none;
-    border-radius: 1em;
-    padding: 1em;
+.registeren form div div{
+    display: block;
 }
 
-.home{
-    margin: auto;
-    max-width: 50em;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    margin-top: 1em;
-    margin-bottom: 5em;
-}
-
-.home button{
-    width: fit-content;
-    align-self: flex-end;
-    background-color: black;
-    color: burlywood;
-    border: none;
-    border-radius: 1em;
-    padding: 1em;
-    font-size: 1em;
-    font-weight: bold;
-}
-
-.home div{
-    display: flex;
-    gap: 1em;
+.registeren form .beschikbaar{
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
-.home div section{ 
-    background-color: white;
-    color: black;
-    flex-basis: 45%;
-    padding: 1em;
-    flex-grow: 1;
+.registeren form .beschikbaar div:nth-of-type(1){
+    margin-right: 1em;
+}
+
+.registeren form .beschikbaar label{
+    flex-direction: row;
+    flex-basis: 100%;
+}
+
+.registeren form input[type="radio"], .registeren form input[type="checkbox"]{
+    margin-right: 0.5em;
+}
+
+.registeren form div:nth-of-type(6) input{
+    width: fit-content;
+}
+
+.registeren form button{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+}
+
+header a img{
+    width: 3em;
+    padding: 0.5em;
+    background-color: var(--second-color);
     border-radius: 1em;
-    height: 10em;
+}
+
+.home{
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1em;
+}
+
+.home section{
+    background-color: var(--grey1);
+    padding: 1em;
+    border-radius: 2em;
+    display: flex;
+    gap: 1em;
+    position: relative;
+}
+
+.home section div:nth-of-type(1){
+    min-width: 8em;
+    border-radius: 2em;
+    height: auto;
+    background-image: url("../static/images/userpicture.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.home section div:nth-of-type(2){
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.home section div ul{
+    list-style-position: outside;
+    margin-left: 1em;
+}
+
+.home section button{
+    border-radius: 2em 0em 0em 0em;
+    font-size: 0.75em;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.filter{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    background-color: var(--main-color);
+    padding: 1em;
+    border-radius: 2em;
+}
+
+.filter form{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.filter form div{
+    font-size: 1.1em;
+}
+
+.filter form .beschikbaar{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.filter form .beschikbaar label{
+    flex-basis: 100%;
+}
+
+.filter form .beschikbaar div:nth-of-type(1){
+    margin-right: 1em;
+}
+
+.filter form input[type="radio"], .filter form input[type="checkbox"]{
+    margin-right: 0.5em;
+}
+
+#darkbackground{
+    background-color: var(--second-color);
+}
+
+footer{
+    background-color: var(--second-color);
+    padding: 1em;
+    position: fixed;
+    bottom: 1em;
+    left: 2em;
+    right: 2em;
+    border-radius: 10em;
+}
+
+footer ul{
+    display: flex;
+    justify-content: space-around;
+}
+
+footer ul li a img{
+    width: 3em;
+}
+
+footer ul .inactive{
+    opacity: 0.75;
 }
