--- a/static/style.css
+++ b/static/style.css
@@ -1,236 +1,234 @@
-/* --- Reset default values + lettertype --- */
+/* --- Reset default values + lettertype toevoegen --- */
 
-*, html{
-    box-sizing:border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
+*,
+html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
-
 
 /* --- Kleuren --- */
 
-:root{
-    --main-color: #FFFFFF;
-    --grey1: #ececec;
-    --grey2: #C4C4C4;
-    --second-color: #000000;
+:root {
+  --main-color: #ffffff;
+  --grey1: #ececec;
+  --grey2: #c4c4c4;
+  --second-color: #000000;
 }
-
 
 /* --- Algemene styling --- */
 /* --- Algemene styling --- */
 /* --- Algemene styling --- */
 
-body{
-    padding: 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    margin-bottom: 7em;
+body {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  margin-bottom: 7em;
 }
 
-button{
-    padding: 1em;
-    background-color: var(--second-color);
-    color: var(--main-color);
-    border-radius: 10em;
-    border: none;
-    width: fit-content;
-    align-self: flex-end;
-    font-size: 1em;
+button {
+  padding: 1em;
+  background-color: var(--second-color);
+  color: var(--main-color);
+  border-radius: 10em;
+  border: none;
+  width: fit-content;
+  align-self: flex-end;
+  font-size: 1em;
 }
 
-header{
-    display: flex;
-    justify-content: space-between;
+header {
+  display: flex;
+  justify-content: space-between;
 }
 
-header a img{
-    width: 3em;
-    padding: 0.5em;
-    background-color: var(--second-color);
-    border-radius: 1em;
+header a img {
+  width: 3em;
+  padding: 0.5em;
+  background-color: var(--second-color);
+  border-radius: 1em;
 }
 
-footer{
-    background-color: var(--second-color);
-    padding: 1em;
-    position: fixed;
-    bottom: 1em;
-    left: 2em;
-    right: 2em;
-    border-radius: 10em;
+footer {
+  background-color: var(--second-color);
+  padding: 1em;
+  position: fixed;
+  bottom: 1em;
+  left: 2em;
+  right: 2em;
+  border-radius: 10em;
 }
 
-footer ul{
-    display: flex;
-    justify-content: space-around;
+footer ul {
+  display: flex;
+  justify-content: space-around;
 }
 
-footer ul li a img{
-    width: 3em;
+footer ul li a img {
+  width: 3em;
 }
 
-footer ul .inactive{
-    opacity: 0.75;
+footer ul .inactive {
+  opacity: 0.75;
 }
-
 
 /* --- Registeren pagina met formulier --- */
 /* --- Registeren pagina met formulier --- */
 /* --- Registeren pagina met formulier --- */
 
-.registeren{
-    background-color: var(--grey1);
-    padding: 1em;
-    border-radius: 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+.registeren {
+  background-color: var(--grey1);
+  padding: 1em;
+  border-radius: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-.registeren form{
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    position: relative;
+.registeren form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  position: relative;
 }
 
-.registeren form div{
-    display: flex;
-    flex-direction: column;
-    font-size: 1.1em;
+.registeren form div {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.1em;
 }
 
-.registeren form div input{
-    padding: 1em;
-    border: none;
-    border-radius: 10em;
+.registeren form div input {
+  padding: 1em;
+  border: none;
+  border-radius: 10em;
 }
 
-.registeren form div div{
-    display: block;
+.registeren form div div {
+  display: block;
 }
 
-.registeren form .beschikbaar{
-    flex-direction: row;
-    flex-wrap: wrap;
+.registeren form .beschikbaar {
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.registeren form .beschikbaar div:nth-of-type(1){
-    margin-right: 1em;
+.registeren form .beschikbaar div:nth-of-type(1) {
+  margin-right: 1em;
 }
 
-.registeren form .beschikbaar label{
-    flex-direction: row;
-    flex-basis: 100%;
+.registeren form .beschikbaar label {
+  flex-direction: row;
+  flex-basis: 100%;
 }
 
-.registeren form input[type="radio"], .registeren form input[type="checkbox"]{
-    margin-right: 0.5em;
+.registeren form input[type="radio"],
+.registeren form input[type="checkbox"] {
+  margin-right: 0.5em;
 }
 
-.registeren form div:nth-of-type(6) input{
-    width: fit-content;
+.registeren form div:nth-of-type(6) input {
+  width: fit-content;
 }
 
-.registeren form button{
-    position: absolute;
-    right: 0;
-    bottom: 0;
+.registeren form button {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
-
 
 /* --- Home pagina met alle oppassen --- */
 /* --- Home pagina met alle oppassen --- */
 /* --- Home pagina met alle oppassen --- */
 
-.home{
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 1em;
+.home {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 1em;
 }
 
-.home section{
-    background-color: var(--grey1);
-    padding: 1em;
-    border-radius: 2em;
-    display: flex;
-    gap: 1em;
-    position: relative;
+.home section {
+  background-color: var(--grey1);
+  padding: 1em;
+  border-radius: 2em;
+  display: flex;
+  gap: 1em;
+  position: relative;
 }
 
-.home section div:nth-of-type(1){
-    min-width: 8em;
-    border-radius: 2em;
-    height: auto;
-    background-image: url("../static/images/userpicture.png");
-    background-position: center;
-    background-size: cover;
+.home section div:nth-of-type(1) {
+  min-width: 8em;
+  border-radius: 2em;
+  height: auto;
+  background-image: url("../static/images/userpicture.png");
+  background-position: center;
+  background-size: cover;
 }
 
-.home section div:nth-of-type(2){
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+.home section div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.home section div ul{
-    list-style-position: outside;
-    margin-left: 1em;
+.home section div ul {
+  list-style-position: outside;
+  margin-left: 1em;
 }
 
-.home section button{
-    border-radius: 2em 0em 2em 0em;
-    font-size: 0.75em;
-    position: absolute;
-    right: 0;
-    bottom: 0;
+.home section button {
+  border-radius: 2em 0em 2em 0em;
+  font-size: 0.75em;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
-
 
 /* --- Filter pagina --- */
 /* --- Filter pagina --- */
 /* --- Filter pagina --- */
 
-.filter{
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    background-color: var(--main-color);
-    padding: 1em;
-    border-radius: 2em;
+.filter {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  background-color: var(--main-color);
+  padding: 1em;
+  border-radius: 2em;
 }
 
-.filter form{
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+.filter form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-.filter form div{
-    font-size: 1.1em;
+.filter form div {
+  font-size: 1.1em;
 }
 
-.filter form .beschikbaar{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.filter form .beschikbaar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.filter form .beschikbaar label{
-    flex-basis: 100%;
+.filter form .beschikbaar label {
+  flex-basis: 100%;
 }
 
-.filter form .beschikbaar div:nth-of-type(1){
-    margin-right: 1em;
+.filter form .beschikbaar div:nth-of-type(1) {
+  margin-right: 1em;
 }
 
-.filter form input[type="radio"], .filter form input[type="checkbox"]{
-    margin-right: 0.5em;
+.filter form input[type="radio"],
+.filter form input[type="checkbox"] {
+  margin-right: 0.5em;
 }
 
-#darkbackground{
-    background-color: var(--second-color);
+#darkbackground {
+  background-color: var(--second-color);
 }
